--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -20,10 +20,9 @@
           <label class="block text-gray-700 mb-1 font-medium">Tipo de encomienda</label>
           <select #tipo required class="w-full border-gray-300 rounded p-2 focus:ring-red-700 focus:border-red-700">
             <option disabled selected value="">Seleccione un tipo</option>
-            <option>Documento</option>
-            <option>Paquete pequeño</option>
-            <option>Paquete mediano</option>
-            <option>Paquete grande</option>
+            <option>Envio pequeño</option>
+            <option>Envio regular</option>
+            <option>Tarifa Extra</option>
           </select>
         </div>
 
